--- a/package.json
+++ b/package.json
@@ -1,25 +1,18 @@
 {
   "name": "ai-recruiter-ui",
-  "version": "0.1.0",
-  "private": true,
+  "type": "module",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build"
+    "build": "vite build"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
     "axios": "^1.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.3"
-  },
-  "browserslist": ["defaults"],
-  "homepage": ".",
-  "_note": "below two lines point CRA to current dir",
-  "src": "index.tsx",
-  "public": "."
+    "@vitejs/plugin-react": "^4.3.1",
+    "vite": "^5.3.3"
+  }
 }
