--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -1,22 +1,10 @@
-# ---- build stage ----
 FROM node:18-alpine AS build
-
-# Set correct working directory
 WORKDIR /app
-
-# Copy package files first (they *must* be in the root of your repo)
 COPY package*.json ./
-
-# Install dependencies
-RUN npm ci --silent
-
-# Copy everything else (including index.tsx, index.html, etc.)
+RUN npm ci
 COPY . .
-
-# Build the app (creates /app/build)
 RUN npm run build
 
-# ---- runtime stage ----
 FROM nginx:alpine
-COPY --from=build /app/build /usr/share/nginx/html
+COPY --from=build /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
